--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
-site: Gesko
-title: Gesko
-greetings: Hello there! 👋
+site: plyr0
+title: plyr0
+greetings: elo!
 description: >-
-  just a minimalist, personal blog
+  my personal blog
+  with random stuff
 lang: en-US
-timezone:  Europe/Rome
-repo: https://github.com/DavideBri/Gesko # site repo [optional]
+timezone:  Europe/Warsaw
+repo: # https://github.com/plyr0/plyr0.github.io # site repo [optional]
 data-theme: dark # default theme "dark" | "light"
-discus-identifier: powex # replace with your disqus shortname
-comments-enabled: false # true to enable disqus comments, false to hide them
 
 author:
-  name: gesko
+  name: plyr0
+  avatar: avatar.jpg
+  url: "https://github.com/plyr0"
+  email: your-email@email.com # email adress
   bio: just a minimalist, personal blog
-  userpicture: 
-  username: # general username
-  github: DavideBri # github username
-  twitter: # twitter username
+  username: plyr0
+  github: plyr0
   mastodon: # mastodon profile (ex. mastodon.social/@my_username)
   linkedin: # linkedin profile
   email: your-email@email.com # email adress
@@ -25,14 +25,13 @@ author:
 googlewebfonts: family=Play:wght@400;700&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,300;1,400;1,500;1,600;1,700;1,900
 
 # URL settings
-url: "https://DavideBri.github.io" # Domain Name of host. [username].github.io for github pages
-baseurl: "/Gesko" # sub folder for jekyll site. only if jekyll site not in root of host. leave blank if not wishd. always add / in front.
+url: "https://plyr0.codeberg.page" # Domain Name of host. [username].github.io for github pages
+baseurl: # sub folder for jekyll site. only if jekyll site not in root of host. leave blank if not wishd. always add / in front.
 permalink: pretty
 
 # local
 # url: "http://localhost:4000" # 
-# baseurl: "" # 
-
+# baseurl:
 
 markdown: kramdown
 kramdown:
